--- a/index.html
+++ b/index.html
@@ -242,9 +242,12 @@
         <div class="col-xs-6">
           <h3 class="tittle-mobile">Mariajosé Barriga</h3>
           <h4 class="subtitle-mobile">Developer Web</h4>
-          <!--<a href="http://www.googleplus.com/falconmasters" target="_blank" class=" icon fab fa-github"></a>
-          <a href="http://www.pinterest.com/falconmasters" target="_blank" class="icon1 fab fa-google-plus"></a>
-          <a href="mailto:contacto@falconmasters.com" class="icon1 fab fa-linkedin-in"></a>-->
+          <ul class="cont-icons">
+            <li><a href="http://www.googleplus.com/falconmasters" target="_blank" class="fab fa-github"></a></li>
+            <li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="fab fa-google-plus"></a></li>
+            <li><a href="mailto:contacto@falconmasters.com" class="fab fa-linkedin-in"></a></li>
+          </ul>
+
       
 
          </div>
