--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
       
     </section>
     <section class="home-movile" id="cont-home">
-      <div class="row">
-        <div class="col-xs-6">
-          <h3 class="tittle-mobile">Mariajosé Barriga</h3>
-          <h4 class="subtitle-mobile">Developer Web</h4>
-          <ul class="cont-icons">
-            <li><a href="http://www.googleplus.com/falconmasters" target="_blank" class="fab fa-github"></a></li>
-            <li><a href="http://www.pinterest.com/falconmasters" target="_blank" class="fab fa-google-plus"></a></li>
-            <li><a href="mailto:contacto@falconmasters.com" class="fab fa-linkedin-in"></a></li>
+      <div class="row align-items-center">
+        <div class="col-xs-12 col-sm-12">
+          <h3 class="tittle-mobile text-center">Mariajosé Barriga</h3>
+          <h4 class="subtitle-mobile text-center">Developer Web</h4>
+          <ul class="cont-icons justify-content-center">
+            <li class="text-center align-self-center"><a href="http://www.googleplus.com/falconmasters" target="_blank" class="fab fa-github"></a></li>
+            <li class="text-center align-self-center"><a href="http://www.pinterest.com/falconmasters" target="_blank" class="fab fa-google-plus"></a></li>
+            <li class="text-center align-self-center"><a href="mailto:contacto@falconmasters.com" class="fab fa-linkedin-in"></a></li>
           </ul>
 
       
@@ -254,14 +254,14 @@
       </div>
     </section>
     <section class="about-movile" id="cont-about">
-      <div class="row">
-        <div class="col-xs-6 col-sm-6 contain-about">
+      <div class="row align-items-center">
+        <div class="col-xs-12 col-sm-12 contain-about">
           <h6 class="text-center text-about">Soy Diseñadora grafica de profesión titulada como tecnico y egresada como profesional, llevo 5 años alimentandome de aprendizaje constante en el rubro tanto grafico, textil y como publicitario, logrando armar un taller de estampados (Merchandising) y una tienda online de estampados de poleras serigraficas, con las ansías de seguir aprendiendo llegue a "Laboratoria", donde actualmente me dedico a formarme como desarrolladora Web (Front-end), en la cúal e aprendido diversas disciplinas que me han ayudado a seguir creciendo, tanto profesional como personalmente.-</h6>
         </div>
       </div>
     </section>
     <section class="hability-movile" id="cont-hability">
-     <div class="row">
+     <div class="row align-items-center">
        <div class="col-xs-12 icons-mobile">
         <ul>
           <li>
@@ -300,7 +300,7 @@
 
     <section class="proyects-movile" id="cont-proyects">
       <div class="row">
-        <div class="col-xs-8 col-sm-8 contain-proyects1">
+        <div class="col-xs-12 col-sm-12 contain-proyects1">
           <figure class="snip1446">
             <img src="img/trabajo-1.jpg" alt="sample15" />
             <figcaption>
@@ -315,12 +315,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6 col-sm-6 contain-proyects">
+        <div class="col-xs-12 col-sm-12 contain-proyects">
           <figure class="snip1446">
             <img src="img/trabajo-2.png" alt="sample15" />
             <figcaption>
               <h4>Lab-car-boilerplate</h4>
-              <p>Lab car Boilerplate es una Maqueta realizada con html y css con diseño responsive para conductores y pasajeros de taxis. </p>
+              <p>Maqueta realizada con html y css responsive para conductores y pasajeros de taxis. </p>
               <div class="icons"><a href="#"><i class="ion-chatbubbles"></i></a>
                 <a href="https://github.com/Barrigamjgomez/lab-car-boilerplate" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://barrigamjgomez.github.io/lab-car-boilerplate/" target="_blank"><i class="fab fa-chrome"></i></a>
@@ -330,7 +330,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6 col-sm-6 contain-proyects">
+        <div class="col-xs-12 col-sm-12 contain-proyects">
           <figure class="snip1446">
             <img src="img/trabajo-3.png" alt="sample15" />
             <figcaption>
